# aws-templates

./: .env  .gitignore  MyShelve.db  README - GCP.md  README.md  _.env  _launch-copy.json  _settings-copy.json  package-lock.json  package.json  z_init.py
Serverless/: _pyNotes.txt  _samNotes.txt  pyproject.toml  template.yml  z_ruff.toml
Serverless-SAM/: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  _pyNotes.txt  _serverlessNotes.md  pyproject.toml  ruff.toml  template-apigw-cognitoAuth.yaml  template-apigw-dynamodb.yml  template-apigwhttp-lambda.yaml  template-apigwhttp-lambda2.yaml  template-appcomposer.yaml  template-sqs.yml  template.yml  z_Makefile
Serverless-SAM-template/: README.MD  _pyNotes.txt  _samNotes.txt  _serverlessNotes.md  pyproject.toml  requirements.txt  samNotes.txt  samconfig.toml  serverlessNotes.md  serverlessNotes.txt  template-apigw-dynamodb.yml  template-sqs.yml  template.yml
Serverless-SAM-template/aws_utils/: aws_utils.py  dynamodb_utils3.py  s3_utils.py  utils.py
Serverless-SAM-template/lambdas/: apigw_handler.py
Serverless-SAM-template/tests/: sqs_tester.py
Serverless-SAM-template/tests/integration/: conftest.py
Serverless-SAM-template/tests/unit/: pytester.py  sqs_tester.py
Serverless-SAM/NodeJS/apigw-lambda-dynamodb/: README.md
Serverless-SAM/NodeJS/apigw-lambda-dynamodb2/: README.md
Serverless-SAM/Python/apigw-lambda/: samconfig.toml
Serverless-SAM/events/: appsync-mutation.json  appsync-query.json
Serverless-SAM/lambda_responses/: alb.json  apigw_rest_proxy.json
Serverless-SAM/lambdas/: sqs_handler.py
Serverless-SAM/lambdas/integration/: DbHandler.py
Serverless-SAM/schemas/: pydantic_apigw.py
Serverless-SAM/tests/: test_sam_local.py  test_sqs.py  test_utils.py
Serverless-SAM/tests/unit/: test_sqs.py
Serverless-SAM/utils_aws/: _utils_boto3.py  utils_aws_cognito.py  utils_aws_dynamodb.py  utils_aws_dynamodb0.py  utils_aws_dynamodb1.py  utils_aws_dynamodb2.py  utils_aws_dynamodb3.py  utils_aws_enums.py  utils_aws_lambda.py  utils_aws_requests-aws4auth.py  utils_aws_s3.py  utils_aws_sqs.py  utils_lambda.py
Serverless-SAM/utils_aws/testing/: moto.py  pytest.py
Serverless-SAM/utils_js/: _home.html  package-lock.json  tsconfig.json
Serverless-SAM/utils_js/src/: utils_ts.ts
Serverless-SAM/utils_js/useful/: mandelbrot.html
Serverless-SAM/utils_js_aws/dynamodb/: dynamodb.js  lambda_dynamodb_put.js
Serverless-SAM/utils_powertools/: utils_powertools_2_logging.py  utils_powertools_4_apigw_rest.yaml  utils_powertools_4_lambdaURL.yaml  utils_powertools_4_restAPI.py  utils_powertools_4_restAPIs.py  utils_powertools_5_GraphQL.graphql  utils_powertools_5_GraphQL.py  utils_powertools_6_parameters.py  utils_powertools_7_batch.py  utils_powertools_7_batch.yml  utils_powertools_8_pydantic.py  utils_powertools_99_streaming.py
Serverless-SAM/utils_python/: _python0  _python0.py  _python1.py  _python2.py  _python3.py  _python311.py  _python312.py  test.py  utils.py  utils_asyncio.py  utils_dataclasses.py  utils_datetime.py  utils_dotenv  utils_functools.py  utils_io.py  utils_itertools.py  utils_logging.py  utils_osshutilsyspath.py  utils_ossyspath.py  utils_pandasnumpy.py  utils_pendulum.py  utils_pydantic.py  utils_pydantic_apigw.py  utils_regex.py  utils_requests.py  utils_threading.py  zpdnp.ipynb
Serverless-SAM/utils_python/algorithms/: MyClass.py  interview.py  my_class.py  utils_algorithms.py  utils_leetcode.py
Serverless-SAM/utils_python/fastapi/: fastapiSQLAlchemy.py  sqlite.db
Serverless-SAM/utils_python/fastapiFlaskSQL/: api_flask.py  db_sqlite.py
Serverless-SAM/utils_python/gui/: turtleGUI.py
Serverless-SAM/utils_python/langchain/: utils_langchain.py
Serverless-SAM/utils_python/numpypandasmatplotlib/: utils_matplotlib.py  utils_pandasnumpy.py
Serverless-SAM/yamls/: template-apigw-cognitoAuth.yaml  template-apigw-dynamodb.yml  template-apigw-openapi303.yaml  template-apigwhttp-lambda1.yaml  template-apigwhttp-lambda2.yaml  template-appcomposer.yaml  template-sqs.yml
Serverless-SAM/yamls-sf/: template.yml
Serverless-SAM/yamls-sftest/: stateMachine.asl.yaml
Serverless/Z_CDK/: awsCDKConstructs.txt  awsCDKNotes-2.txt  awsCDKNotes.txt  cdk-nag.txt  cdk-nagStagesTagsAspectsTesting.txt  lambdaApiGwCognito.py
Serverless/Z_CDK/lambda-with-layer/: app.py  (+1 more)
Serverless/Z_SAM/: _samNotes.txt  awsSAMNotes.txt  z_samconfig.toml
Serverless/Z_Terraform/: backend.tfvars  terraform.yaml  terraformNotes.text
Serverless/events/: _lambda-response-v1.json  _lambda-response-v2.txt  apigw-http-v1.json  apigw-http-v2.json  appsync-mutation.json  appsync-query.json
Serverless/lambdas/: __lambda.py  _basicLambda.py  _layers.py  lambda_concurrency.py
Serverless/utils_aws/: __utils_boto3.py  _utils_boto3.py  utils_aws_lambda_aio.py  utils_aws_requests-aws4auth.py  utils_aws_s3.py  utils_aws_secretsmgr.py
Serverless/utils_js/: template.html  utils_js.html  utils_js_fetch.js
Serverless/utils_powertools/: _lambdaPydantic.py  requirements.txt  utils_powertools_0.py  utils_powertools_10_batching.py  utils_powertools_11A_dynamostreams.py  utils_powertools_1_tracing.py  utils_powertools_2_logging.py  utils_powertools_3_metrics.py  utils_powertools_4_apigw_rest.yaml  utils_powertools_4_apigw_restAPI.py  utils_powertools_4_apigw_websocket.py  utils_powertools_4_lambdaURL.yaml  utils_powertools_4_restAPI.py  utils_powertools_6_AppsyncGraphQL.graphql  utils_powertools_6_AppsyncGraphQL.py  utils_powertools_6_parser(pydantic).py  utils_powertools_7_sqs.py  utils_powertools_8A_builtins_sns.py  utils_powertools_8_envelopesEventBridge.py  utils_powertools_8_pydantic.py  utils_powertools_9_envelopesEventBridge.py
Serverless/utils_python/: ___0.py  _aa.py  _pplay.py  _pplay0.py  _pplay1.py  _pplay2.py  _python0.py  _python1.py  _python2.py  _python3.py  utils.py  utils_abc_protocols.py  utils_asyncio.py  utils_dataclasses.py  utils_datetime.py  utils_functools.py  utils_io.py  utils_logging.py  utils_multiprocessing.py  utils_osshutilsyspath.py  utils_regex.py  utils_requests.py  utils_system.py  utils_threading.py
(+1126 files in other folders)
