[tool.poetry]
name = "serverless-sam-template"
version = "0.1.0"
description = "Serverless SAM Template"
authors = ["S. Gokhan Topcu <gtopcu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.29.5"
aws-lambda-powertools = "^2.27.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
