[tool.poetry]
name = "serverless-sam"
version = "0.1.0"
description = "Sample SAM Package"
authors = ["S. Gokhan Topcu <gtopcu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pydantic = "^2.5.1"
boto3 = "^1.29.5"
botocore = "^1.29.5"
aws-lambda-powertools = "^2.27.1"
pathlib = "^1.0.1"
pre-commit = "^3.5.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
ruff == "0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
