[tool.poetry]
name = "serverless-sam"
version = "2.8.1"
description = "AWS SAM Sample Package"
authors = ["S. Gokhan Topcu <gtopcu@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.34.71"
botocore = "^1.34.71"
aws-lambda-powertools = "^2.35.1"
pydantic = "^2.6.4"
# pydantic = {extras = ["email"], version = "^2.6.4"}
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
