[tool.poetry]
name = "test-poetry"
version = "1.0.0"
description = ""
authors = ["S. Gökhan Topçu <gtopcu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.13"
requests = "^2.32.3"
simplejson = "^3.19.3"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.35.90"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^3.4.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
