[tool.poetry]
name = "test-repo-gtopcu"
version = "1.0.0"
description = "test package"
authors = ["S. Gökhan Topçu <gtopcu@gmail.com>"]
readme = "README.md"
packages = [{include = "test_repo_gtopcu"}]

[tool.poetry.dependencies]
python = "~3.13"
# pydantic = {extras = ["email"], version = "^2.6.4"}

[tool.poetry.group.dev.dependencies]
boto3 = "^1.35.90"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^3.4.0"}
# my-package = {path = "../path", develop = true}
pre-commit = "^4.0.1"
isort = "^5.13.2"
ruff = "^0.8.4"
pylint = "^3.3.3"
pyright = "^1.1.391"
safety = "^3.2.14"
pytest = "^8.3.4"
pytest-env = "^1.1.5"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
coverage = "^7.6.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = [".venv"]
typeCheckingMode = "basic"
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
