[tool.poetry]
name = "test-repo-gtopcu"
version = "1.0.0"
description = "test package"
authors = ["S. Gökhan Topçu <gtopcu@gmail.com>"]
readme = "README.md"
packages = [{include = "test_repo_gtopcu"}]

[tool.poetry.dependencies]
python = "~3.13"
# pydantic = {extras = ["email"], version = "^2.6.4"}

[tool.poetry.group.dev.dependencies]
boto3 = "^1.35.90"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^3.4.0"}
# my-package = {path = "../path", develop = true}
pre-commit = "^4.0.1"
isort = "^5.13.2"
ruff = "^0.8.4"
pylint = "^3.3.3"
pyright = "^1.1.391"
safety = "^3.2.14"
pytest = "^8.3.4"
pytest-env = "^1.1.5"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
coverage = "^7.6.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.pyright]
# exclude = [".venv"]
# typeCheckingMode = "basic"
# pythonVersion = "3.13"
# venvPath = "."
# venv = ".venv"

# [tool.ruff]
# # List of enabled rule codes
# select = ["E", "F", "W", "I", "N", "B", "C4", "SIM", "ERA", "PL", "RUF"]
# 
# # List of disabled rule codes
# ignore = ["ERA001"]
# 
# # Maximum line length for rules like E501
# line-length = 100
# 
# # Exclude specific files or directories
# exclude = [
#     ".bzr",
#     ".direnv",
#     ".eggs",
#     ".git",
#     ".git-rewrite",
#     ".hg",
#     ".mypy_cache",
#     ".nox",
#     ".pants.d",
#     ".pytype",
#     ".ruff_cache",
#     ".svn",
#     ".tox",
#     "__pypackages__",
#     "_build",
#     "buck-out",
#     "build",
#     "dist",
#     "node_modules",
#     "venv",
#     ".venv",
#     ".pytest_cache",
#     "__pycache__"
# ]
# 
# # Per-file ignores for specific rules
# [tool.ruff.per-file-ignores]
# "__init__.py" = ["F401"]    # Ignore `F401` (unused imports) in all `__init__.py` files
# "tests/*" = ["D", "S101"]   # Ignore specific rules for test files
# "tests/*" = ["E402"]        # Ignore `E402` (import violations) in all `tests/` directories