[tool.poetry]
name = "test-project"
version = "0.1.0"
description = "init"
authors = ["S. Gökhan Topçu <gtopcu@gmail.com>"]
readme = "README.md"
packages = [{include = "test_repo"}]

[tool.poetry.dependencies]
python = ">=3.12.0,<3.14"
# pydantic = {extras = ["email"], version = "^2.6.4"}

[tool.poetry.group.dev.dependencies]
python-dotenv = "1.0.0"
boto3 = "^1.35.90"
constructs = "10.4.2"
aws-cdk-lib = "~2.196.0"
aws-cdk.aws-lambda-python-alpha = "2.196.0a0"
aws-cdk.aws-apigatewayv2-alpha = "1.17.0"
aws-cdk.aws-apigatewayv2-integrations-alpha = "2.114.1a0"
aws-lambda-powertools = "^3.12.0"
# aws-lambda-powertools = {extras = ["aws-sdk"], version = "^3.4.0"}
# my-package = {path = "../path", develop = true}
pre-commit = "^4.0.1"
isort = "^5.13.2"
ruff = "^0.8.4"
pylint = "^3.3.3"
pyright = "^1.1.391"
safety = "^3.2.14"
pytest = "^8.3.4"
pytest-env = "^1.1.5"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
coverage = "^7.6.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]
# exclude = [".venv"]
typeCheckingMode = "basic"
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ["E", "F", "W", "I", "N", "B", "C4", "ARG" "SIM", "ERA", "PL", "RUF"]
# ignore = ["ERA001", "W291", "W292", "W293"] 

# Maximum line length for rules like E501
line-length = 100
 
# Exclude specific files or directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    ".pytest_cache",
    "__pycache__"
]

# # Per-file ignores for specific rules
# [tool.ruff.per-file-ignores]
# "__init__.py" = ["F401"]    # Ignore `F401` (unused imports) in all `__init__.py` files
# "tests/*" = ["D", "S101"]   # Ignore specific rules for test files
# "tests/*" = ["E402"]        # Ignore `E402` (import violations) in all `tests/` directories