[metadata]
name = mypackage
version = 0.0.1
author = hukanege
author_email = gtopcu@gmail.com
description = Sample Project
url = https://github.com/gtopcu/mypackage
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

install_requires =
	boto3~=1.20

[options.packages.find]
where = src
